[threaded-animations] REGRESSION: Flickery animations on https://pudding.cool/2026/03/ivf/ https://bugs.webkit.org/show_bug.cgi?id=310806 rdar://173154867

Reviewed by Simon Fraser.

This website uses the "Svelte" web development framework which provides some built-in transitions.
Specifically, it uses the "fly" transition [0] which allows to animate an element newly added to
the DOM with an "opacity" and "transform" animation, with an optional delay which this page uses.

The way Svelte implements its notion of such animations is by generating two successive animations
using the Web Animations JavaScript APIs. A first animation implements the "delay" phase by running
for the duration specified by the delay and setting the "0" and "1" keyframes to the initial value [1].
Then a second animation implements the actual interpolation [2] (although Svelte opts to generate one
keyframe per animation frame instead of delegating the blending to the browser, though that is not
directly relevant to this bug). The second animation is started in the `onfinish` callback of the
first animation.

The way threaded animations work, we update the list of animations in the remote layer tree for a given
node when its associated element in the DOM tree has its set of active animations change. So in this case,
there is an update when the "delay" animation starts, a second update when that animation ends and the
"active" animation starts, and finally when the "active" animation ends. This process happens in the Web
process.

By the time the "delay" animation is found to be finished in the Web process, its counterpart running
in the remote layer tree may have reached its natural end, and depending on how busy the Web process is,
this could take more than a single animation frame. This is not much of an issue if the animation is set
to be forward-filling, but in this case the "delay" animation is not and as the remote animation reaches
its natural end, it will cease to have any effect in the remote layer tree, meaning that for however long
it will take the updated accelerated effect stack to reach the remote layer tree, the animated state will
be incorrect.

In the accelerated animation code predating threaded animations, this was dealt with in `GraphicsLayerCA::setupAnimation()`
where we would override any accelerated animation's specified fill mode to be forward-filling, specifically
to avoid flashing in similar circumstances.

We now implement a similar behavior for threaded animations, although with more nuance. Indeed, with threaded
animations, we support non-replacing composite operations ("add" and "accumulate") as well as full support for
implicit "from" and "to" values in keyframes. Because of this, we can't just override the fill mode in all
circumstances. So we add logic to `RenderLayerBacking::updateAcceleratedEffectsAndBaseValues()` to only override
the fill mode for animations that will _not_ generate a value that will be used as input by a another animation
further up the stack.

[0] https://svelte.dev/docs/svelte/svelte-transition#fly
[1] https://github.com/sveltejs/svelte/blob/0e9e76f29262b5f64ac7a5d4db37ec83c9181634/packages/svelte/src/internal/client/dom/elements/transitions.js#L379
[2] https://github.com/sveltejs/svelte/blob/0e9e76f29262b5f64ac7a5d4db37ec83c9181634/packages/svelte/src/internal/client/dom/elements/transitions.js#L440

Tests: webanimations/threaded-animations/fill-mode-adjustment-additive.html
       webanimations/threaded-animations/fill-mode-adjustment-adjust-effect-with-non-composed-properties.html

* LayoutTests/webanimations/threaded-animations/fill-mode-adjustment-additive-expected.txt: Added.
* LayoutTests/webanimations/threaded-animations/fill-mode-adjustment-additive.html: Added.
* LayoutTests/webanimations/threaded-animations/fill-mode-adjustment-adjust-effect-with-non-composed-properties-expected.txt: Added.
* LayoutTests/webanimations/threaded-animations/fill-mode-adjustment-adjust-effect-with-non-composed-properties.html: Added.
* Source/WebCore/platform/animation/AcceleratedEffect.cpp:
(WebCore::AcceleratedEffect::makeForwardsFilling):
(WebCore::AcceleratedEffect::composedProperties const):
* Source/WebCore/platform/animation/AcceleratedEffect.h:
* Source/WebCore/rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateAcceleratedEffectsAndBaseValues):

Canonical link: https://commits.webkit.org/310985@main